--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,98 @@
-@import"https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap";* body{box-sizing:border-box;padding:0;margin:0}body{background-color:#152237;overflow:hidden;height:100vh}hr{color:#7b879d}.custom_container{height:100%}.main-content{width:25%;border-radius:10px;background-color:#1f3251;box-shadow:0px 0px 0px 20px rgba(7,15,27,.1),0px 0px 0px 40px rgba(44,81,136,.1)}.main-content .image-width img{width:100%}.main-content .crypto-title{font-family:"Outfit",sans-serif;color:#fff}.main-content .crypto-body{font-family:"Outfit",sans-serif;font-size:18px;color:#7b879d}.main-content .crypto-details .crypto-amount{color:#00fff7;font-weight:bolder;font-size:15px;font-family:"Outfit",sans-serif}.main-content .crypto-details .exp-date{color:#7b879d}.main-content .crypto-creator__avatar{width:12%}.main-content .crypto-creator__avatar img{width:100%}.main-content #crypto-creator__creation-text{color:#8bacda;font-weight:400;font-family:"Outfit",sans-serif;letter-spacing:1px;font-size:15px}.main-content #creator a{text-decoration:none;font-family:"Outfit",sans-serif}.main-content #creator a:hover{color:#00fff7 !important}.main-content .crypto-creator p #creator a:hover>div#image-change img{visibility:hidden}
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+* body {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: hsl(218deg, 44%, 15%);
+  overflow: hidden;
+  height: 100vh;
+}
+
+hr {
+  color: hsl(220deg, 15%, 55%);
+}
+
+.custom_container {
+  height: 100%;
+}
+
+.main-content {
+  width: 25%;
+  border-radius: 10px;
+  background-color: hsl(218deg, 44%, 22%);
+  box-shadow: 0px 0px 0px 20px rgba(7, 15, 27, 0.1), 0px 0px 0px 40px rgba(44, 81, 136, 0.1);
+}
+.main-content .image-width img {
+  width: 100%;
+}
+.main-content .image-width .image__overlay {
+  position: absolute;
+  background-color: hsl(0deg, 0%, 100%);
+  top: 22.7%;
+  left: 42.8%;
+  width: 14.5%;
+  height: 29.5%;
+  background-color: hsla(178deg, 100%, 50%, 0.5);
+  border-radius: 3px;
+  opacity: 0;
+  cursor: pointer;
+}
+.main-content .image-width .image__overlay:hover {
+  opacity: 1;
+}
+.main-content .image-width .image__overlay:hover img {
+  position: absolute;
+  width: 10%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.main-content .crypto-title {
+  font-family: "Outfit", sans-serif;
+  color: hsl(0deg, 0%, 100%);
+}
+.main-content .crypto-title a {
+  color: hsl(0deg, 0%, 100%);
+}
+.main-content .crypto-body {
+  font-family: "Outfit", sans-serif;
+  font-size: 18px;
+  color: hsl(220deg, 15%, 55%);
+}
+.main-content .crypto-details .crypto-amount {
+  color: hsl(178deg, 100%, 50%);
+  font-weight: bolder;
+  font-size: 15px;
+  font-family: "Outfit", sans-serif;
+}
+.main-content .crypto-details .exp-date {
+  color: hsl(220deg, 15%, 55%);
+}
+.main-content .crypto-creator__avatar {
+  width: 12%;
+}
+.main-content .crypto-creator__avatar img {
+  width: 100%;
+}
+.main-content #crypto-creator__creation-text {
+  color: hsl(215deg, 51%, 70%);
+  font-weight: 400;
+  font-family: "Outfit", sans-serif;
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+.main-content #creator a,
+.main-content .crypto-title a {
+  text-decoration: none;
+  font-family: "Outfit", sans-serif;
+}
+.main-content #creator a:hover,
+.main-content .crypto-title a:hover {
+  color: hsl(178deg, 100%, 50%) !important;
+}
+.main-content .crypto-creator p #creator a:hover > div#image-change img {
+  visibility: hidden;
+}/*# sourceMappingURL=style.css.map */
